force-app/main/default/objects/Associated_Training_Contacts__c/fields/portal_access__c.field-meta.xml
<CustomField>
    <fullName>portal_access__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Portal Access</label>
    <referenceTo>Portal_Access__c</referenceTo>
    <relationshipLabel>Associated Training Contacts</relationshipLabel>
    <relationshipName>Associated_Training_Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>