force-app/main/default/objects/Associated_Training_Contacts__c/fields/Practitioner_eToolkit__c.field-meta.xml
<CustomField>
    <fullName>Practitioner_eToolkit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Practitioner eToolkit</label>
    <type>Checkbox</type>
</CustomField>