force-app/main/default/objects/Associated_Training_Contacts__c/fields/Pre_work_preparation__c.field-meta.xml
<CustomField>
    <fullName>Pre_work_preparation__c</fullName>
    <label>Pre-work preparation</label>
    <type>TextArea</type>
</CustomField>