force-app/main/default/objects/Associated_Training_Contacts__c/fields/Pre_work_received__c.field-meta.xml
<CustomField>
    <fullName>Pre_work_received__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if the required pre-work has been received</description>
    <label>Pre-work received</label>
    <type>Checkbox</type>
</CustomField>