force-app/main/default/objects/Associated_Training_Contacts__c/fields/Presentation_Red_d_Score__c.field-meta.xml
<CustomField>
    <fullName>Presentation_Red_d_Score__c</fullName>
    <label>Presentation Red&apos;d - Score</label>
    <length>10</length>
    <type>Text</type>
</CustomField>