force-app/main/default/objects/Associated_Training_Contacts__c/fields/Prework_Created__c.field-meta.xml
<CustomField>
    <fullName>Prework_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Prework Created</label>
    <type>Checkbox</type>
</CustomField>