force-app/main/default/objects/Associated_Training_Contacts__c/fields/prework_task_status__c.field-meta.xml
<CustomField>
    <fullName>prework_task_status__c</fullName>
    <label>Prework Task Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Started</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>