force-app/main/default/objects/Associated_Training_Contacts__c/fields/Prior_to_Program_Accessed_audio_book__c.field-meta.xml
<CustomField>
    <fullName>Prior_to_Program_Accessed_audio_book__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Prior to Program - Accessed audio book</label>
    <type>Checkbox</type>
</CustomField>