force-app/main/default/objects/Associated_Training_Contacts__c/fields/Prior_to_Program_logged_into_portal__c.field-meta.xml
<CustomField>
    <fullName>Prior_to_Program_logged_into_portal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Prior to Program - logged into portal</label>
    <type>Checkbox</type>
</CustomField>