force-app/main/default/objects/Associated_Training_Contacts__c/fields/Program_End_Date_Feedback__c.field-meta.xml
<CustomField>
    <fullName>Program_End_Date_Feedback__c</fullName>
    <formula>Training_Event__r.End_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Program End Date - Feedback</label>
    <type>Date</type>
</CustomField>