force-app/main/default/objects/Associated_Training_Contacts__c/fields/Program_improvement_recommendations__c.field-meta.xml
<CustomField>
    <fullName>Program_improvement_recommendations__c</fullName>
    <label>Program improvement recommendations</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>