force-app/main/default/objects/Associated_Training_Contacts__c/fields/Program_Title_Feedback__c.field-meta.xml
<CustomField>
    <fullName>Program_Title_Feedback__c</fullName>
    <formula>TEXT(Training_Event__r.Title__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Program Title - Feedback</label>
    <type>Text</type>
</CustomField>