force-app/main/default/objects/Associated_Training_Contacts__c/fields/Program_TM_Feedback__c.field-meta.xml
<CustomField>
    <fullName>Program_TM_Feedback__c</fullName>
    <formula>Training_Event__r.Assigned_Training_Manager__r.FirstName + &quot; &quot; +  Training_Event__r.Assigned_Training_Manager__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Program TM - Feedback</label>
    <type>Text</type>
</CustomField>