force-app/main/default/objects/Associated_Training_Contacts__c/fields/Project_change_type__c.field-meta.xml
<CustomField>
    <fullName>Project_change_type__c</fullName>
    <label>Project change type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Continuous Improvement: Operating Procedures</fullName>
            </value>
            <value>
                <fullName>Continuous Improvement: Regulatory Policies / Practices</fullName>
            </value>
            <value>
                <fullName>Customer Relationship Management (CRM)/sales management system</fullName>
            </value>
            <value>
                <fullName>Electronic conversion</fullName>
            </value>
            <value>
                <fullName>Electronic Health Records system</fullName>
            </value>
            <value>
                <fullName>Enterprise Resource Planning (ERP) system</fullName>
            </value>
            <value>
                <fullName>Human Resources tools/system installation</fullName>
            </value>
            <value>
                <fullName>Innovation: New Market Expansion</fullName>
            </value>
            <value>
                <fullName>Innovation: New Product Deployment</fullName>
            </value>
            <value>
                <fullName>Installation of change management</fullName>
            </value>
            <value>
                <fullName>Installation of Continuous Improvement</fullName>
            </value>
            <value>
                <fullName>Installation of Lean/Six Sigma</fullName>
            </value>
            <value>
                <fullName>Installation of Strategic Planning</fullName>
            </value>
            <value>
                <fullName>IT hardware upgrade/installation</fullName>
            </value>
            <value>
                <fullName>IT Software / Hardware Other</fullName>
            </value>
            <value>
                <fullName>IT software upgrade/installation</fullName>
            </value>
            <value>
                <fullName>Merger/acquisition</fullName>
            </value>
            <value>
                <fullName>New product deployment/new market expansion</fullName>
            </value>
            <value>
                <fullName>Office move/relocation</fullName>
                <label>Office Move / Relocation / Redesign</label>
            </value>
            <value>
                <fullName>Organizational Restructure</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Outsourcing</fullName>
            </value>
            <value>
                <fullName>Performance review system</fullName>
            </value>
            <value>
                <fullName>Personnel Development system (acquisition, talent management)</fullName>
            </value>
            <value>
                <fullName>Process documentation/optimization</fullName>
            </value>
            <value>
                <fullName>Reduction in force</fullName>
            </value>
            <value>
                <fullName>Regulatory policies/practices</fullName>
            </value>
            <value>
                <fullName>Reorganization</fullName>
            </value>
            <value>
                <fullName>Safety programs/systems</fullName>
            </value>
            <value>
                <fullName>Strategy: Change Management Deployment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>