force-app/main/default/objects/Associated_Training_Contacts__c/fields/Project_Change_Type_Other__c.field-meta.xml
<CustomField>
    <fullName>Project_Change_Type_Other__c</fullName>
    <label>Project Change Type - Other</label>
    <length>255</length>
    <type>Text</type>
</CustomField>