force-app/main/default/objects/Associated_Training_Contacts__c/fields/project_compatibility__c.field-meta.xml
<CustomField>
    <fullName>project_compatibility__c</fullName>
    <label>Project Compatibility</label>
    <length>2500</length>
    <type>LongTextArea</type>
</CustomField>