force-app/main/default/objects/Associated_Training_Contacts__c/fields/Project_Confidentiality__c.field-meta.xml
<CustomField>
    <fullName>Project_Confidentiality__c</fullName>
    <label>Project Confidentiality</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1 - Standard</fullName>
            </value>
            <value>
                <fullName>2 - Protected</fullName>
            </value>
            <value>
                <fullName>3 - Non Disclosure Agreement</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>