force-app/main/default/objects/Associated_Training_Contacts__c/fields/project_description__c.field-meta.xml
<CustomField>
    <fullName>project_description__c</fullName>
    <label>Project Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>