force-app/main/default/objects/Associated_Training_Contacts__c/fields/Project_Grouping__c.field-meta.xml
<CustomField>
    <fullName>Project_Grouping__c</fullName>
    <label>Project Grouping</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Individual</fullName>
            </value>
            <value>
                <fullName>Team 1</fullName>
            </value>
            <value>
                <fullName>Team 2</fullName>
            </value>
            <value>
                <fullName>Team 3</fullName>
            </value>
            <value>
                <fullName>Team 4</fullName>
            </value>
            <value>
                <fullName>Team 5</fullName>
            </value>
            <value>
                <fullName>Team 6</fullName>
            </value>
            <value>
                <fullName>Team 7</fullName>
            </value>
            <value>
                <fullName>Team 8</fullName>
            </value>
            <value>
                <fullName>Team 9</fullName>
            </value>
            <value>
                <fullName>Team 10</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>