force-app/main/default/objects/Associated_Training_Contacts__c/fields/project_management_approach__c.field-meta.xml
<CustomField>
    <fullName>project_management_approach__c</fullName>
    <label>Project Management Approach</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Sequential</fullName>
            </value>
            <value>
                <fullName>Iterative</fullName>
            </value>
            <value>
                <fullName>Hybrid</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>