force-app/main/default/objects/Associated_Training_Contacts__c/fields/project_objectives__c.field-meta.xml
<CustomField>
    <fullName>project_objectives__c</fullName>
    <label>Project Objectives</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>