force-app/main/default/objects/Associated_Training_Contacts__c/fields/Project_Setup_and_PCT__c.field-meta.xml
<CustomField>
    <fullName>Project_Setup_and_PCT__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Project Setup and PCT</label>
    <type>Checkbox</type>
</CustomField>