force-app/main/default/objects/Associated_Training_Contacts__c/fields/Recommend_Program__c.field-meta.xml
<CustomField>
    <fullName>Recommend_Program__c</fullName>
    <label>Recommend Program</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>