force-app/main/default/objects/Associated_Training_Contacts__c/fields/Registered_Date__c.field-meta.xml
<CustomField>
    <fullName>Registered_Date__c</fullName>
    <description>This is the date the initially registered for a training program.</description>
    <inlineHelpText>This is the date the initially registered for a training program.</inlineHelpText>
    <label>Registered Date</label>
    <type>Date</type>
</CustomField>