force-app/main/default/objects/Associated_Training_Contacts__c/fields/Registration_Email__c.field-meta.xml
<CustomField>
    <fullName>Registration_Email__c</fullName>
    <label>Registration Email</label>
    <type>Date</type>
</CustomField>