force-app/main/default/objects/Associated_Training_Contacts__c/fields/Registration_Lead_Time__c.field-meta.xml
<CustomField>
    <fullName>Registration_Lead_Time__c</fullName>
    <description>How far ahead this registration is from the Training Event start date</description>
    <inlineHelpText>This field gives information on how far ahead this registration is from the Training Event start date</inlineHelpText>
    <label>Registration Lead Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>