force-app/main/default/objects/Associated_Training_Contacts__c/fields/Resend_Survey_Link__c.field-meta.xml
<CustomField>
    <fullName>Resend_Survey_Link__c</fullName>
    <description>When selecting &quot;Yes&quot; an automatic program feedback survey will be sent to the &quot;Survey Resend Email for GetFeedback&quot; email address located just above this field on the associated training contact.</description>
    <inlineHelpText>When selecting &quot;Yes&quot; an automatic program feedback survey will be sent to the &quot;Survey Resend Email for GetFeedback&quot; email address located just above this field on the associated training contact.</inlineHelpText>
    <label>Resend Survey Link</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>