force-app/main/default/objects/Associated_Training_Contacts__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Attended</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Certified</fullName>
            </value>
            <value>
                <fullName>Registered</fullName>
            </value>
            <value>
                <fullName>Registered - wanting to move</fullName>
            </value>
            <value>
                <fullName>Pending - Awaiting Payment</fullName>
            </value>
            <value>
                <fullName>Pending - Awaiting Approval</fullName>
            </value>
            <value>
                <fullName>Scheduled to Attend</fullName>
            </value>
            <value>
                <fullName>Waitlisted</fullName>
            </value>
            <value>
                <fullName>Partially Attended</fullName>
            </value>
            <value>
                <fullName>3</fullName>
                <isActive>false</isActive>
                <label>3</label>
            </value>
            <value>
                <fullName>Atended</fullName>
                <isActive>false</isActive>
                <label>Atended</label>
            </value>
            <value>
                <fullName>Atteneded</fullName>
                <isActive>false</isActive>
                <label>Atteneded</label>
            </value>
            <value>
                <fullName>Awaiting Payment</fullName>
                <isActive>false</isActive>
                <label>Awaiting Payment</label>
            </value>
            <value>
                <fullName>Certfied</fullName>
                <isActive>false</isActive>
                <label>Certfied</label>
            </value>
            <value>
                <fullName>Certifed</fullName>
                <isActive>false</isActive>
                <label>Certifed</label>
            </value>
            <value>
                <fullName>Certifield</fullName>
                <isActive>false</isActive>
                <label>Certifield</label>
            </value>
            <value>
                <fullName>Failed</fullName>
                <isActive>false</isActive>
                <label>Failed</label>
            </value>
            <value>
                <fullName>ITEM insert</fullName>
                <isActive>false</isActive>
                <label>ITEM insert</label>
            </value>
            <value>
                <fullName>Invited</fullName>
                <isActive>false</isActive>
                <label>Invited</label>
            </value>
            <value>
                <fullName>Logistics Contact</fullName>
                <isActive>false</isActive>
                <label>Logistics Contact</label>
            </value>
            <value>
                <fullName>No show</fullName>
                <isActive>false</isActive>
                <label>No show</label>
            </value>
            <value>
                <fullName>Not Certified</fullName>
                <isActive>false</isActive>
                <label>Not Certified</label>
            </value>
            <value>
                <fullName>Pending</fullName>
                <isActive>false</isActive>
                <label>Pending</label>
            </value>
            <value>
                <fullName>Schedueld to attend</fullName>
                <isActive>false</isActive>
                <label>Schedueld to attend</label>
            </value>
            <value>
                <fullName>Schedueled to Attend</fullName>
                <isActive>false</isActive>
                <label>Schedueled to Attend</label>
            </value>
            <value>
                <fullName>Scheduled</fullName>
                <isActive>false</isActive>
                <label>Scheduled</label>
            </value>
            <value>
                <fullName>Scheduled to Attended</fullName>
                <isActive>false</isActive>
                <label>Scheduled to Attended</label>
            </value>
            <value>
                <fullName>Scheled to Attend</fullName>
                <isActive>false</isActive>
                <label>Scheled to Attend</label>
            </value>
            <value>
                <fullName>Scheuled to attend</fullName>
                <isActive>false</isActive>
                <label>Scheuled to attend</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>