force-app/main/default/objects/Associated_Training_Contacts__c/fields/Survey_Resend_Email_for_GetFeedback__c.field-meta.xml
<CustomField>
    <fullName>Survey_Resend_Email_for_GetFeedback__c</fullName>
    <inlineHelpText>Enter the email address the attendee wants the survey resent to</inlineHelpText>
    <label>Survey Resend Email for GetFeedback</label>
    <type>Email</type>
</CustomField>