force-app/main/default/objects/Associated_Training_Contacts__c/fields/Top_Wins_Of_Applying_Methodology__c.field-meta.xml
<CustomField>
    <fullName>Top_Wins_Of_Applying_Methodology__c</fullName>
    <label>Top Wins Of Applying Methodology</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>