force-app/main/default/objects/Associated_Training_Contacts__c/fields/Training_Event_Contract_Type__c.field-meta.xml
<CustomField>
    <fullName>Training_Event_Contract_Type__c</fullName>
    <description>This field was added for the Zapier Credly Badging Process.  MB 2/1/22</description>
    <formula>TEXT(Training_Event__r.Contract_type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Training Event Contract Type</label>
    <type>Text</type>
</CustomField>