force-app/main/default/objects/Associated_Training_Contacts__c/fields/Trigger_Individual_Check_in_Email__c.field-meta.xml
<CustomField>
    <fullName>Trigger_Individual_Check_in_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Trigger Individual Check-in Email</label>
    <type>Checkbox</type>
</CustomField>