force-app/main/default/objects/Associated_Training_Contacts__c/fields/Type_of_Event_Feedback__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Event_Feedback__c</fullName>
    <formula>TEXT (Training_Event__r.Type_of_Event__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Type of Event - Feedback</label>
    <type>Text</type>
</CustomField>