force-app/main/default/objects/Associated_Training_Contacts__c/fields/Use_comments_in_marketing__c.field-meta.xml
<CustomField>
    <fullName>Use_comments_in_marketing__c</fullName>
    <label>Use comments in marketing</label>
    <type>TextArea</type>
</CustomField>