force-app/main/default/objects/Associated_Training_Contacts__c/fields/Vaccine_Status__c.field-meta.xml
<CustomField>
    <fullName>Vaccine_Status__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Vaccine Status</label>
    <type>Checkbox</type>
</CustomField>