force-app/main/default/objects/Associated_Training_Contacts__c/fields/Valuable_takeaways_from_this_training__c.field-meta.xml
<CustomField>
    <fullName>Valuable_takeaways_from_this_training__c</fullName>
    <label>Valuable takeaways from this training?</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>