force-app/main/default/objects/Associated_Training_Contacts__c/fields/Venue_Experience__c.field-meta.xml
<CustomField>
    <fullName>Venue_Experience__c</fullName>
    <label>Venue Experience</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>