force-app/main/default/objects/Associated_Training_Contacts__c/fields/Venue_Pkg_Confirmed__c.field-meta.xml
<CustomField>
    <fullName>Venue_Pkg_Confirmed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Venue Pkg Confirmed</label>
    <type>Checkbox</type>
</CustomField>