force-app/main/default/objects/Associated_Training_Contacts__c/fields/Watched_eLearning__c.field-meta.xml
<CustomField>
    <fullName>Watched_eLearning__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Watched eLearning</label>
    <type>Checkbox</type>
</CustomField>