force-app/main/default/objects/Associated_Training_Contacts__c/fields/Welcome_Dinner__c.field-meta.xml
<CustomField>
    <fullName>Welcome_Dinner__c</fullName>
    <label>Welcome Dinner</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Maybe</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>