force-app/main/default/objects/Associated_Training_Contacts__c/fields/What_kind_of_follow_up_support__c.field-meta.xml
<CustomField>
    <fullName>What_kind_of_follow_up_support__c</fullName>
    <label>What kind of follow up support</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>