force-app/main/default/objects/Associated_Training_Contacts__c/fields/working_with_others__c.field-meta.xml
<CustomField>
    <fullName>working_with_others__c</fullName>
    <label>Working With Others</label>
    <length>255</length>
    <type>Text</type>
</CustomField>