force-app/main/default/objects/Associated_Training_Contacts__c/fields/Would_you_like_to_speak_to_an_advisor__c.field-meta.xml
<CustomField>
    <fullName>Would_you_like_to_speak_to_an_advisor__c</fullName>
    <label>Would you like to speak to an advisor?</label>
    <type>TextArea</type>
</CustomField>