force-app/main/default/objects/Associated_Training_Contacts__c/fields/X18_Digit_CASESAFEID_Assoc_Training_Cont__c.field-meta.xml
<CustomField>
    <fullName>X18_Digit_CASESAFEID_Assoc_Training_Cont__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>18 Digit CASESAFEID Assoc. Training Cont</label>
    <type>Text</type>
</CustomField>