force-app/main/default/objects/Associated_Training_Contacts__c/fields/Year_Completed_Certification__c.field-meta.xml
<CustomField>
    <fullName>Year_Completed_Certification__c</fullName>
    <label>Year Completed Certification</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>2020-2021</fullName>
            </value>
            <value>
                <fullName>2018-2019</fullName>
            </value>
            <value>
                <fullName>2016-2017</fullName>
            </value>
            <value>
                <fullName>2014-2015</fullName>
            </value>
            <value>
                <fullName>2010-2013</fullName>
            </value>
            <value>
                <fullName>2004-2009</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>