force-app/main/default/objects/Associated_Training_Contacts__c/fields/years_experience__c.field-meta.xml
<CustomField>
    <fullName>years_experience__c</fullName>
    <label>Years Experience</label>
    <length>30</length>
    <type>Text</type>
</CustomField>