force-app/main/default/objects/Associated_Training_Contacts__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Prework_Created__c</columns>
    <columns>pct_change_management_score__c</columns>
    <columns>Project_Title__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Attended,Certified</value>
    </filters>
    <label>All</label>
</ListView>